Connect Herostatistic with backend via mocked api
